--- a/TeamManagement/appsettings.json
+++ b/TeamManagement/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Database": {
+    "ConnectionString": "Replace this text with your connection string"
+  }
 }
