Basic db structure and service / repository implementation

--- a/TeamManagement/appsettings.json
+++ b/TeamManagement/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
 
   "Database": {
-    "ConnectionString": "Replace this text with your connection string"
+    "ConnectionString": "Server=.;Initial Catalog=TeamManagement;Persist Security Info=False;Integrated Security=true;MultipleActiveResultSets=True;Encrypt=false;TrustServerCertificate=true;Connection Timeout=30"
   }
 }
