Added Automapper and default seed data

--- a/TeamManagement.Services/TeamManagement.Services.csproj
+++ b/TeamManagement.Services/TeamManagement.Services.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TeamManagement.Data\TeamManagement.Data.csproj" />
+    <ProjectReference Include="..\TeamManagement.Utilities\TeamManagement.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
