--- a/TeamManagement.Utilities/TeamManagement.Utilities.csproj
+++ b/TeamManagement.Utilities/TeamManagement.Utilities.csproj
@@ -1,11 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\TeamManagement.NUnitTest\TeamManagement.NUnitTest.csproj" />
-  </ItemGroup>
 
 </Project>
